unpackaged/main/default/objects/ERS_Club_Mapping__mdt/ERS_Club_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ERS Club Mapping</label>
    <pluralLabel>ERS Club Mappings</pluralLabel>
</CustomObject>