unpackaged/main/default/objects/ERS_Club_Mapping__mdt/fields/Club_Name__c.field-meta.xml
<CustomField>
    <fullName>Club_Name__c</fullName>
    <label>Club Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>