unpackaged/main/default/objects/ERS_Club_Mapping__mdt/fields/Comm_Center__c.field-meta.xml
<CustomField>
    <fullName>Comm_Center__c</fullName>
    <label>Comm Center</label>
    <length>3</length>
    <type>Text</type>
</CustomField>