unpackaged/main/default/objects/ERS_Club_Mapping__mdt/fields/Dispatcher_Code__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher_Code__c</fullName>
    <label>Dispatcher Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>