unpackaged/main/default/objects/ERS_Club_Mapping__mdt/fields/Enable_Call_Payment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Call_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Call Payment</label>
    <type>Checkbox</type>
</CustomField>